--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,30 +1,69 @@
 //Navigation
 
 .mainNav {
-  margin: 1.6% 14% 0 14.6%;
+  margin: 1.3% 14% 0 14.4%;
   padding-bottom: 20px;
   text-align: center;
 
+  @include mQ (1200px) {
+    padding: 0;
+    margin: 20px 0;
+  }
+
+  @include mQ (767px) {
+    margin: 0;
+    padding: 0;
+  }
+
   .logo {
     font-weight: 900;
-    font-size: 1.1rem;
+    font-size: 0.85rem;
     float: left;
     width: 25%;
-    margin-top: 0.2%;
+    margin-top: 0.7%;
+
+    @include mQ (1200px) {
+      width: 20%;
+    }
+
+    @include mQ (1000px) {
+      width: 15%;
+    }
+
+    @include mQ (767px) {
+      width: 100%;
+      font-size: 1.75rem;
+      margin: 10px 0;
+    }
   }
 
   .navItems {
     float: left;
-    width: 49%;
-    margin-left: 2.1%;
+    width: 50%;
+    margin-left: 0.7%;
+
+    @include mQ (767px) {
+      width: 100%;
+      margin: 10px 0;
+      text-align: center;
+    }
 
     li {
-      margin-left: -2%;
+      margin-left: 4%;
       display: inline-block;
-      font-size: 0.55rem;
+      font-size: 0.45rem;
 
       a {
         color: $deepBlue;
+        padding: 0;
+
+        @include mQ (767px) {
+          font-size: 0.65rem;
+        }
+
+        @include mQ (320px) {
+          font-size: 0.55rem;
+        }
 
         &:hover {
           color: lighten($deepBlue, 40);
@@ -38,14 +77,31 @@
     float: left;
     width: 23%;
     text-align: left;
-    margin-left: -20px;
+
+    @include mQ (1000px) {
+      width: 28%;
+      margin-left: 20px;
+      text-align: right;
+    }
+
+    @include mQ (767px) {
+      width: 100%;
+      text-align: center;
+      margin: 10px 0;
+    }
 
     li {
       display: inline-block;
-      font-size: 0.6rem;
+      font-size: 0.45rem;
+      margin-left: 3.5%;
+
+      @include mQ (767px) {
+        font-size: 0.7rem;
+      }
 
       a.JoinUs {
         color: $deepBlue;
+        padding: 0;
 
         &:hover {
           color: lighten($deepBlue, 40);
@@ -58,6 +114,11 @@
         background: $goldYellow;
         padding: 11px 15px 11px 28px;
         border-radius: 5px;
+        font-size: 0.5rem;
+
+        @include mQ (767px) {
+          font-size: 0.7rem;
+        }
 
         &:hover {
           background: lighten($goldYellow, 10);
