--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -14,7 +14,7 @@ body {
   color: $deepBlue;
 }
 
-html, body, ul, ol, li, form, h1, h2, h3, h4, h5, h6, p, span, button, {
+html, body, ul, ol, li, form, h1, h2, h3, h4, h5, h6, p, span, button {
   margin: 0;
   padding: 0;
 }
