--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -117,6 +117,10 @@
       z-index: 1;
       height: 22px;
 
+      @include mQ (1400px) {
+        right: 60%;
+      }
+
       @include mQ (1200px) {
         right: 52%;
       }
@@ -304,28 +308,24 @@
   }
 
   .statCards {
-    float: right;
-    width: 40%;
     text-align: center;
-    padding-left: 0.3%;
+    float: left;
+    width: 40%;
 
-    @include mQ (1000px) {
-      margin-top: 60px;
-    }
-
-    @include mQ (767px) {
-      float: none;
+    @include mQ(767px) {
+      margin-top: 20px;
       width: 100%;
-      margin-top: 3%;
-      height: 350px;
     }
 
     li {
-      @include grid(2, 7%);
-      width: 44%;
-      padding: 15% 10%;
+      @include grid(2, 10%);
+      padding: 50px 0;
       background: $lightGray;
-      display: block;
+
+      @include mQ(320px) {
+        width: calc(100% - 10px);
+        margin-right: 0;
+      }
 
     p {
       font-size: 0.5rem;
@@ -350,26 +350,11 @@
 }//END OF STAT SECTION
 
 .mainCatalog {
-  height: 1180px;
   background: $lightGray;
-  padding: 2.55% 10% 10% 21%;
+  padding: 2.55% 10% 6.3% 21%;
 
   @include mQ (1200px) {
     padding: 5%;
-  }
-
-  @include mQ (1000px) {
-    height: 1080px;
-    padding: 11.5%;
-  }
-
-  @include mQ (767px) {
-    padding: 5%;
-    height: 1300px;
-  }
-
-  @include mQ (320px) {
-    height: 2250px;
   }
 
   .catalogTitle {
@@ -389,38 +374,34 @@
 
   //CATALOG CARD HOLDERS
   .catalogCards {
-    height: 875px;
-
-    @include mQ (1000px) {
-      height: 750px;
-    }
-
-    @include mQ (767px) {
-      height: 980px;
-    }
+    width: 100%;
+    float: left;
 
     .catalogCard {
       background: $royalBlue;
       position: relative;
-      @include grid(6, 2.5%);
-      @include box(46%, 27%);
+      @include grid(3, 2.5%);
+      width: 27%;
+      padding: 185px 0;
       -webkit-box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
       -moz-box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
       box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
 
       @include mQ (1000px) {
-        @include box(46%, 30%);
+        width: 30%;
       }
 
-      @include mQ (767px) {
+      @include mQ(767px) {
         @include grid(2, 5%);
-        @include box(30%, 46%);
+
+        &:nth-child(3) {
+          margin-right: 5%;
+        }
       }
 
-      @include mQ (320px) {
-        @include grid(1, 8%);
-        width: 85%;
-        margin-left: 7%;
+      @include mQ(450px) {
+        width: calc(100% - 5px);
+        margin: 0 0 15px 0;
       }
 
       &:hover {
@@ -436,6 +417,10 @@
 
         @include mQ (767px) {
           font-size: 0.8rem;
+        }
+
+        @include mQ (767px) {
+          font-size: 0.9rem;
         }
       }
 
@@ -514,12 +499,13 @@
 
       .catalogBox {
         position: absolute;
+        padding: 0;
         bottom: 0;
         background: #fff;
         @include box(95px, 100%);
 
         @include mQ (767px) {
-          height: 100px;
+          height: 120px;
         }
       }
     }
@@ -645,36 +631,30 @@
   }
 
   .howItWorksCard {
-    margin: 4.8% 1.5% 0.5% 0.4%;
     display: inline-block;
-    @include box(20%, 27%);
-    background: fff;
-    webkit-box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
-    -moz-box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
-    box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
+    width: calc((85% / 3) - 10px);
+    padding: 80px 0;
+    margin-top: 40px;
+    background: #fff;
     transition: 0.3s;
     position: relative;
     overflow: hidden;
-    padding: 11% 3% 3.5% 3.2%;
-
-    @include mQ (1000px) {
-      @include box(300px, 200px);
-    }
+    webkit-box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
+    box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
+    margin-right: 20px;
 
     @include mQ (767px) {
-      margin-left: 15%;
-      @include box(10%, 65%);
-      padding: 12%;
+      text-align: center;
+      width: 60%;
+      margin: 5% 20%;
+      padding: 60px 0;
     }
 
     @include mQ (500px) {
-      margin-left: 12%;
-      @include box(10%, 80%);
-      padding: 12%;
-    }
-
-    @include mQ (320px) {
-      margin-left: 5%;
+      padding:40px 0;
+      width: 80%;
+      margin: 5% 10%;
     }
 
     &:hover {
@@ -696,20 +676,20 @@
     }
 
     h5 {
+      text-align: center;
       font-size: 0.65rem;
       margin-bottom: 20px;
 
       @include mQ (767px) {
         font-size: 1rem;
-        margin-top: 30%;
-        padding-left: 10%;
+        margin-top: 20%;
       }
     }
 
     p {
       font-size: 0.45rem;
       line-height: 25px;
-      margin-left: 11.5%;
+      padding: 0 30px;
 
       @include mQ (767px) {
         font-size: 0.8rem;
@@ -721,9 +701,11 @@
       border-bottom: 2px solid $deepBlue;
       font-size: 0.5rem;
       margin: 4% 0 0 12%;
+      padding: 0;
 
       @include mQ (767px) {
         font-size: 0.8rem;
+        margin: 0;
       }
 
       &:hover {
@@ -833,24 +815,15 @@
 
 .mainAgent {
   background: $lightGray;
-  padding: 3% 10% 0 20%;
-  height: 680px;
+  padding: 3% 10% 5% 20%;
+  width: 100%;
 
   @include mQ (1200px) {
-    padding: 10% 3%;
+    padding: 5% 3%;
   }
 
   @include mQ (1000px) {
-    padding: 10% 0;
-  }
-
-  @include mQ (767px) {
-    padding: 10% 0;
-    height: 1550px;
-  }
-
-  @include mQ (320px) {
-    height: 1500px;
+    padding: 2% 0;
   }
 
   .agentTitle {
@@ -878,44 +851,40 @@
   }
 
   .agentCards {
-    height: 500px;
 
-    @include mQ (1200px) {
-      height: 420px;
+    @include mQ (767px) {
+      margin: 20%;
+    }
+
+    @include mQ (500px) {
+      margin: 10%;
     }
 
     .agentCardHolder {
       background: #cdccce;
       position: relative;
-      @include grid(3, 2.4%);
-      @include box(77%, 27.5%);
+      display: inline-block;
+      width: calc(80% / 3);
       -webkit-box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
       -moz-box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
       box-shadow: -1px 2px 28px -15px rgba(0,0,0,0.75);
       transition: 0.3s;
-      padding: 0;
-
-      @include mQ (1000px) {
-        @include box(85%, 30%);
-      }
+      padding: 180px 0;
+      margin-right: 2.5%;
 
       @include mQ (767px) {
-        @include box(90%, 60%);
-        margin:5% 0 5% 20%;
+        margin: 0 0 20px 0;
+        width: 100%;
       }
 
       @include mQ (500px) {
-        @include box (95%, 80%);
-        margin: 5% 0 5% 10%;
-      }
-
-      @include mQ (350px) {
-        margin-left: 5%;
-        @include box(95%, 90%);
+        width: 100%;
+        padding: 150px 0;
       }
 
       &:hover {
-        height: 400px
+        cursor: pointer;
+        padding: 200px 0;
       }
 
       span {
@@ -938,7 +907,7 @@
         color: $goldYellow;
 
         @include mQ (767px) {
-          font-size: 0.8rem;
+          font-size: 0.7rem;
         }
       }
 
@@ -962,6 +931,7 @@
 
       .agentBox {
         position: absolute;
+        padding: 0;
         bottom: 0;
         background: #fff;
         @include box(80px, 100%);
@@ -974,7 +944,8 @@
   margin-bottom: 5.5%;
 
   .addBox {
-    @include box(265px, 38.5%);
+    width: 38.5%;
+    padding: 125px 0;
     background: #8da4be;
     z-index: -1;
 
@@ -983,9 +954,7 @@
     }
 
     @include mQ (767px) {
-      @include box(300px, 80%);
-      margin: 0 10%;
-      padding: 0;
+      width: 100%;
     }
 
     @include mQ (320px) {
@@ -1003,7 +972,12 @@
     }
 
     @include mQ (767px) {
-      @include box(70px, 80%);
+      width: 60%;
+    }
+
+    @include mQ (500px) {
+      width: 100%;
+      margin: 0;
     }
   }
 
@@ -1057,13 +1031,17 @@
         margin-top: 25%;
       }
 
-      @include mQ (1000px) {
+      @include mQ (900px) {
         margin: 35% 0 0 5.5%;
       }
 
       @include mQ (767px) {
         float: none;
-        margin: 0 10%;
+        margin: 0 20%;
+      }
+
+      @include mQ (500px) {
+        margin: 0;
       }
 
       @include mQ (320px) {
@@ -1085,7 +1063,8 @@
         width: 60%;
 
         @include mQ (767px) {
-          bottom: -60%;
+          font-size: 0.8rem;
+          bottom: -50%;
         }
 
         @include mQ (500px) {
@@ -1171,13 +1150,17 @@
         margin: 25% 0 0 20%;
       }
 
-      @include mQ (1000px) {
+      @include mQ (900px) {
         margin: 35% 0 0 7.5%;
       }
 
       @include mQ (767px) {
         float: none;
-        margin: 0 10%;
+        margin: 0 20%;
+      }
+
+      @include mQ (500px) {
+        margin: 0;
       }
 
       @include mQ (320px) {
