--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,11 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
   z-index: 1;
   height: 22px;
 }
+@media screen and (max-width: 1400px) {
+  .mainHero .heroContact .heroImgPhone {
+    right: 60%;
+  }
+}
 @media screen and (max-width: 1200px) {
   .mainHero .heroContact .heroImgPhone {
     right: 52%;
@@ -484,36 +489,32 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
   margin-top: 5%;
 }
 .mainStat .statCards {
-  float: right;
-  width: 40%;
   text-align: center;
-  padding-left: 0.3%;
-}
-@media screen and (max-width: 1000px) {
-  .mainStat .statCards {
-    margin-top: 60px;
-  }
+  float: left;
+  width: 40%;
 }
 @media screen and (max-width: 767px) {
   .mainStat .statCards {
-    float: none;
+    margin-top: 20px;
     width: 100%;
-    margin-top: 3%;
-    height: 350px;
   }
 }
 .mainStat .statCards li {
   float: left;
-  margin-right: 7%;
-  margin-bottom: 7%;
-  width: 46.5%;
-  width: 44%;
-  padding: 15% 10%;
+  margin-right: 10%;
+  margin-bottom: 10%;
+  width: 45%;
+  padding: 50px 0;
   background: #f6f5f4;
-  display: block;
 }
 .mainStat .statCards li:nth-child(2n) {
   margin-right: 0;
+}
+@media screen and (max-width: 320px) {
+  .mainStat .statCards li {
+    width: calc(100% - 10px);
+    margin-right: 0;
+  }
 }
 .mainStat .statCards li p {
   font-size: 0.5rem;
@@ -536,30 +537,12 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 }
 
 .mainCatalog {
-  height: 1180px;
   background: #f6f5f4;
-  padding: 2.55% 10% 10% 21%;
+  padding: 2.55% 10% 6.3% 21%;
 }
 @media screen and (max-width: 1200px) {
   .mainCatalog {
     padding: 5%;
-  }
-}
-@media screen and (max-width: 1000px) {
-  .mainCatalog {
-    height: 1080px;
-    padding: 11.5%;
-  }
-}
-@media screen and (max-width: 767px) {
-  .mainCatalog {
-    padding: 5%;
-    height: 1300px;
-  }
-}
-@media screen and (max-width: 320px) {
-  .mainCatalog {
-    height: 2250px;
   }
 }
 .mainCatalog .catalogTitle {
@@ -579,17 +562,8 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
   }
 }
 .mainCatalog .catalogCards {
-  height: 875px;
-}
-@media screen and (max-width: 1000px) {
-  .mainCatalog .catalogCards {
-    height: 750px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .mainCatalog .catalogCards {
-    height: 980px;
-  }
+  width: 100%;
+  float: left;
 }
 .mainCatalog .catalogCards .catalogCard {
   background: #b1d7e8;
@@ -597,17 +571,16 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
   float: left;
   margin-right: 2.5%;
   margin-bottom: 2.5%;
-  width: 14.5833333333%;
-  height: 46%;
+  width: 31.6666666667%;
   width: 27%;
+  padding: 185px 0;
   box-shadow: -1px 2px 28px -15px rgba(0, 0, 0, 0.75);
 }
-.mainCatalog .catalogCards .catalogCard:nth-child(6n) {
+.mainCatalog .catalogCards .catalogCard:nth-child(3n) {
   margin-right: 0;
 }
 @media screen and (max-width: 1000px) {
   .mainCatalog .catalogCards .catalogCard {
-    height: 46%;
     width: 30%;
   }
 }
@@ -617,24 +590,18 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
     margin-right: 5%;
     margin-bottom: 5%;
     width: 47.5%;
-    height: 30%;
-    width: 46%;
   }
   .mainCatalog .catalogCards .catalogCard:nth-child(2n) {
     margin-right: 0;
   }
-}
-@media screen and (max-width: 320px) {
-  .mainCatalog .catalogCards .catalogCard {
-    float: left;
-    margin-right: 8%;
-    margin-bottom: 8%;
-    width: 100%;
-    width: 85%;
-    margin-left: 7%;
+  .mainCatalog .catalogCards .catalogCard:nth-child(3) {
+    margin-right: 5%;
   }
-  .mainCatalog .catalogCards .catalogCard:nth-child(1n) {
-    margin-right: 0;
+}
+@media screen and (max-width: 450px) {
+  .mainCatalog .catalogCards .catalogCard {
+    width: calc(100% - 5px);
+    margin: 0 0 15px 0;
   }
 }
 .mainCatalog .catalogCards .catalogCard:hover {
@@ -650,6 +617,11 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 @media screen and (max-width: 767px) {
   .mainCatalog .catalogCards .catalogCard h5 {
     font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 767px) {
+  .mainCatalog .catalogCards .catalogCard h5 {
+    font-size: 0.9rem;
   }
 }
 .mainCatalog .catalogCards .catalogCard span {
@@ -730,6 +702,7 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 }
 .mainCatalog .catalogCards .catalogCard .catalogBox {
   position: absolute;
+  padding: 0;
   bottom: 0;
   background: #fff;
   height: 95px;
@@ -737,7 +710,7 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 }
 @media screen and (max-width: 767px) {
   .mainCatalog .catalogCards .catalogCard .catalogBox {
-    height: 100px;
+    height: 120px;
   }
 }
 .mainCatalog .searchBox {
@@ -866,43 +839,31 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
   }
 }
 .howItWorksMain .howItWorksCard {
-  margin: 4.8% 1.5% 0.5% 0.4%;
   display: inline-block;
-  height: 20%;
-  width: 27%;
-  background: fff;
-  webkit-box-shadow: -1px 2px 28px -15px rgba(0, 0, 0, 0.75);
-  box-shadow: -1px 2px 28px -15px rgba(0, 0, 0, 0.75);
+  width: calc((85% / 3) - 10px);
+  padding: 80px 0;
+  margin-top: 40px;
+  background: #fff;
   transition: 0.3s;
   position: relative;
   overflow: hidden;
-  padding: 11% 3% 3.5% 3.2%;
-}
-@media screen and (max-width: 1000px) {
-  .howItWorksMain .howItWorksCard {
-    height: 300px;
-    width: 200px;
-  }
+  webkit-box-shadow: -1px 2px 28px -15px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 2px 28px -15px rgba(0, 0, 0, 0.75);
+  margin-right: 20px;
 }
 @media screen and (max-width: 767px) {
   .howItWorksMain .howItWorksCard {
-    margin-left: 15%;
-    height: 10%;
-    width: 65%;
-    padding: 12%;
+    text-align: center;
+    width: 60%;
+    margin: 5% 20%;
+    padding: 60px 0;
   }
 }
 @media screen and (max-width: 500px) {
   .howItWorksMain .howItWorksCard {
-    margin-left: 12%;
-    height: 10%;
+    padding: 40px 0;
     width: 80%;
-    padding: 12%;
-  }
-}
-@media screen and (max-width: 320px) {
-  .howItWorksMain .howItWorksCard {
-    margin-left: 5%;
+    margin: 5% 10%;
   }
 }
 .howItWorksMain .howItWorksCard:hover {
@@ -923,20 +884,20 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
   }
 }
 .howItWorksMain .howItWorksCard h5 {
+  text-align: center;
   font-size: 0.65rem;
   margin-bottom: 20px;
 }
 @media screen and (max-width: 767px) {
   .howItWorksMain .howItWorksCard h5 {
     font-size: 1rem;
-    margin-top: 30%;
-    padding-left: 10%;
+    margin-top: 20%;
   }
 }
 .howItWorksMain .howItWorksCard p {
   font-size: 0.45rem;
   line-height: 25px;
-  margin-left: 11.5%;
+  padding: 0 30px;
 }
 @media screen and (max-width: 767px) {
   .howItWorksMain .howItWorksCard p {
@@ -948,10 +909,12 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
   border-bottom: 2px solid #1f373d;
   font-size: 0.5rem;
   margin: 4% 0 0 12%;
+  padding: 0;
 }
 @media screen and (max-width: 767px) {
   .howItWorksMain .howItWorksCard .howItWorksFind {
     font-size: 0.8rem;
+    margin: 0;
   }
 }
 .howItWorksMain .howItWorksCard .howItWorksFind:hover {
@@ -1065,28 +1028,17 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 
 .mainAgent {
   background: #f6f5f4;
-  padding: 3% 10% 0 20%;
-  height: 680px;
+  padding: 3% 10% 5% 20%;
+  width: 100%;
 }
 @media screen and (max-width: 1200px) {
   .mainAgent {
-    padding: 10% 3%;
+    padding: 5% 3%;
   }
 }
 @media screen and (max-width: 1000px) {
   .mainAgent {
-    padding: 10% 0;
-  }
-}
-@media screen and (max-width: 767px) {
-  .mainAgent {
-    padding: 10% 0;
-    height: 1550px;
-  }
-}
-@media screen and (max-width: 320px) {
-  .mainAgent {
-    height: 1500px;
+    padding: 2% 0;
   }
 }
 .mainAgent .agentTitle h1 {
@@ -1110,59 +1062,41 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
     font-size: 0.8rem;
   }
 }
-.mainAgent .agentCards {
-  height: 500px;
-}
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 767px) {
   .mainAgent .agentCards {
-    height: 420px;
+    margin: 20%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .mainAgent .agentCards {
+    margin: 10%;
   }
 }
 .mainAgent .agentCards .agentCardHolder {
   background: #cdccce;
   position: relative;
-  float: left;
-  margin-right: 2.4%;
-  margin-bottom: 2.4%;
-  width: 31.7333333333%;
-  height: 77%;
-  width: 27.5%;
+  display: inline-block;
+  width: calc(80% / 3);
   box-shadow: -1px 2px 28px -15px rgba(0, 0, 0, 0.75);
   transition: 0.3s;
-  padding: 0;
-}
-.mainAgent .agentCards .agentCardHolder:nth-child(3n) {
-  margin-right: 0;
-}
-@media screen and (max-width: 1000px) {
-  .mainAgent .agentCards .agentCardHolder {
-    height: 85%;
-    width: 30%;
-  }
+  padding: 180px 0;
+  margin-right: 2.5%;
 }
 @media screen and (max-width: 767px) {
   .mainAgent .agentCards .agentCardHolder {
-    height: 90%;
-    width: 60%;
-    margin: 5% 0 5% 20%;
+    margin: 0 0 20px 0;
+    width: 100%;
   }
 }
 @media screen and (max-width: 500px) {
   .mainAgent .agentCards .agentCardHolder {
-    height: 95%;
-    width: 80%;
-    margin: 5% 0 5% 10%;
-  }
-}
-@media screen and (max-width: 350px) {
-  .mainAgent .agentCards .agentCardHolder {
-    margin-left: 5%;
-    height: 95%;
-    width: 90%;
+    width: 100%;
+    padding: 150px 0;
   }
 }
 .mainAgent .agentCards .agentCardHolder:hover {
-  height: 400px;
+  cursor: pointer;
+  padding: 200px 0;
 }
 .mainAgent .agentCards .agentCardHolder span {
   position: absolute;
@@ -1185,7 +1119,7 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 }
 @media screen and (max-width: 767px) {
   .mainAgent .agentCards .agentCardHolder p {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
 }
 .mainAgent .agentCards .agentCardHolder .agentImgOne {
@@ -1205,6 +1139,7 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 }
 .mainAgent .agentCards .agentCardHolder .agentBox {
   position: absolute;
+  padding: 0;
   bottom: 0;
   background: #fff;
   height: 80px;
@@ -1215,8 +1150,8 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
   margin-bottom: 5.5%;
 }
 .mainAdd .addBox {
-  height: 265px;
   width: 38.5%;
+  padding: 125px 0;
   background: #8da4be;
   z-index: -1;
 }
@@ -1227,10 +1162,7 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 }
 @media screen and (max-width: 767px) {
   .mainAdd .addBox {
-    height: 300px;
-    width: 80%;
-    margin: 0 10%;
-    padding: 0;
+    width: 100%;
   }
 }
 @media screen and (max-width: 320px) {
@@ -1251,8 +1183,13 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 }
 @media screen and (max-width: 767px) {
   .mainAdd .addLocation {
-    height: 70px;
-    width: 80%;
+    width: 60%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .mainAdd .addLocation {
+    width: 100%;
+    margin: 0;
   }
 }
 .mainAdd button {
@@ -1307,7 +1244,7 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
     margin-top: 25%;
   }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 900px) {
   .mainAdd .addSectionOne .addLocation {
     margin: 35% 0 0 5.5%;
   }
@@ -1315,7 +1252,12 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 @media screen and (max-width: 767px) {
   .mainAdd .addSectionOne .addLocation {
     float: none;
-    margin: 0 10%;
+    margin: 0 20%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .mainAdd .addSectionOne .addLocation {
+    margin: 0;
   }
 }
 @media screen and (max-width: 320px) {
@@ -1338,7 +1280,8 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 }
 @media screen and (max-width: 767px) {
   .mainAdd .addSectionOne .addLocation p {
-    bottom: -60%;
+    font-size: 0.8rem;
+    bottom: -50%;
   }
 }
 @media screen and (max-width: 500px) {
@@ -1428,7 +1371,7 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
     margin: 25% 0 0 20%;
   }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 900px) {
   .mainAdd .addSectionTwo .addLocation {
     margin: 35% 0 0 7.5%;
   }
@@ -1436,7 +1379,12 @@ ul, ol, li, h1, h2, h3, h4, h5, h6, p, a, button {
 @media screen and (max-width: 767px) {
   .mainAdd .addSectionTwo .addLocation {
     float: none;
-    margin: 0 10%;
+    margin: 0 20%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .mainAdd .addSectionTwo .addLocation {
+    margin: 0;
   }
 }
 @media screen and (max-width: 320px) {
